--- a/PHM-Peru-Analysis.Rmd
+++ b/PHM-Peru-Analysis.Rmd
@@ -75,7 +75,7 @@ summary(df_cases)
 
 -   **province:** The province in which the data was recorded: refers to Peru's counties.
 
--   **district:** The district in which the data was recorded: refers to Peru's towns/cities. Data was collected at local government health establishments. 
+-   **district:** The district in which the data was recorded: refers to Peru's towns/cities. Data was collected at local government health establishments.
 
 -   **year:** .
 
@@ -99,5 +99,66 @@ summary(df_cases)
 
 -   **over_60_death:** .
 
+```{r}
+# Estimation when PCV10 and PCV13 was introduced (year)
+pcv10.intro.date <- 2011
+pcv13.intro.date <- 2013
+
+# Estimation when vaccine efficacy evaluations started as a tuple (year, week)
+vax.eval.date <- list()
+
+```
+
+```{r}
+total_deaths_df <- df_cases[c("year","week", "under_5_death", "over_60_death")]
+total_deaths_by_year <- total_deaths_df %>%
+  group_by(year) %>%
+  summarise(
+    total_under_5   = sum(under_5_death, na.rm = TRUE),
+    total_over_60   = sum(over_60_death, na.rm = TRUE)
+  )
+total_deaths_by_year_week <- total_deaths_df %>%
+  group_by(year, week) %>%
+  summarise(
+    total_under_5 = sum(under_5_death, na.rm = TRUE),
+    total_over_60 = sum(over_60_death, na.rm = TRUE),
+    .groups = "drop"
+  )
+
+total_deaths_by_year_week <- total_deaths_by_year_week %>%
+  mutate(date = as.Date(paste0(year, '-01-01')) + weeks(week-1))
+```
+
+```{r}
+head(total_deaths_by_year_week)
+```
+
+```{r}
+#| fig.width: 15
+#| fig.height: 6
 
 
+
+p1 <- 
+  ggplot(total_deaths_by_year_week, aes(x = date, y = total_under_5)) +
+      geom_point() +
+      labs(title = "Total deaths for <5 yo in Peru",
+         x = "Year", y = "Count") +
+      # Reference line.
+      geom_vline(xintercept = pcv10.intro.date, col = 'red', lty = 2) +
+      geom_vline(xintercept = pcv13.intro.date, col = 'green', lty = 2) +
+      theme_linedraw()
+
+p2 <- 
+  ggplot(total_deaths_by_year_week, aes(x = date, y = total_over_60)) +
+      geom_point() +
+      labs(title = "Total deaths for >60 yo in Peru",
+         x = "Year", y = "Count") +
+      # Reference line.
+      geom_vline(xintercept = pcv10.intro.date, col = 'red', lty = 2) +
+      geom_vline(xintercept = pcv13.intro.date, col = 'green', lty = 2) +
+      theme_linedraw()
+   
+# Display the plots side-by-side.
+grid.arrange(p1, p2, nrow = 1)
+```
