--- a/PHM-Peru-Analysis.Rmd
+++ b/PHM-Peru-Analysis.Rmd
@@ -38,6 +38,7 @@ suppressPackageStartupMessages({
   library("MASS")       # Functions/datasets for statistical analysis
   library("lubridate")  # For date manipulation
   library("ggplot2")    # For creating static visualizations
+  library("RColorBrewer")# For colors in graphs.
   library("scales")     # For formatting plots axis
   library("gridExtra")  # Creates multiple grid-based plots
 })
@@ -52,21 +53,22 @@ suppressPackageStartupMessages({
 NOTE: Location of csv file may be different, adjust accordingly
 
 ```{r}
-df_cases <- read.csv('data\\peru\\peru.csv')
-df_gps <- read.csv('data\\peru\\peru_gps.csv')
+peru <- read.csv('data\\peru\\peru.csv')
+```
+
+Renaming the columns into English.
+
+```{r}
+colnames(peru) <- c('region', 'province', 'district', 'year', 'week', 'department_code', 'geo_code', 'under_5_noncase', 'under_5_case', 'over_60_case', 'under_5_hospitalized', 'over_60_hospitalized', 'under_5_death', 'over_60_death')
+glimpse(peru)
 ```
 
 ```{r}
-colnames(df_cases) <- c('region', 'province', 'district', 'year', 'week', 'department_code', 'geo_code', 'under_5_noncase', 'under_5_case', 'over_60_case', 'under_5_hospitalized', 'over_60_hospitalized', 'under_5_death', 'over_60_death')
-glimpse(df_cases)
+glimpse(peru)
 ```
 
 ```{r}
-glimpse(df_gps)
-```
-
-```{r}
-summary(df_cases)
+summary(peru)
 ```
 
 ## Data dictionary
@@ -77,47 +79,46 @@ summary(df_cases)
 
 -   **district:** The district in which the data was recorded: refers to Peru's towns/cities. Data was collected at local government health establishments.
 
--   **year:** .
+-   **year:** The year in which the data was recorded.
 
--   **week:** .
+-   **week:** The specific week of the year in which the data was recorded.
 
--   **department_code:** .
+-   **department_code:** The code of the health directorate in which the data was recorded.
 
--   **geo_code:** .
+-   **geo_code:** The geographical identification code of the area in which the data was recorded. Peru uses UBIGEO— "UBlcación GEOgráfica," a code assigned to particular districts in Peru.
 
--   **under_5_noncase:** .
+-   **under_5_noncase:** A count representing the number of recorded pneumonia non-cases for children under 5-years-old.
 
--   **under_5_case:** .
+-   **under_5_case:** A count representing the number of recorded pneumonia cases for children under 5-years-old.
 
--   **over_60_case:** .
+-   **over_60_case:** A count representing the number of recorded pneumonia cases for adults over 60-years-old.
 
--   **under_5_hospitalized:** .
+-   **under_5_hospitalized:** A count representing the number of pneumonia-related hospitalizations for children under 5-years-old.
 
--   **over_60_hospitalized:** .
+-   **under_5_death:** A count representing the number of pneumonia-related deaths for children under 5-years-old.
 
--   **under_5_death:** .
+-   **over_60_death:** A count representing the number of pneumonia-related deaths for for adults over 60-years-old.
 
--   **over_60_death:** .
+## Early EDA
+
+Getting estimated dates for vaccine implementation. Set as July 1 of the year it was implemented.
 
 ```{r}
-# Estimation when PCV10 and PCV13 was introduced (year)
-pcv10.intro.date <- 2011
-pcv13.intro.date <- 2013
+# Estimation when PCV7, PCV10 and PCV13 was introduced
+pcv7.intro.date <- as.Date('2009-07-01')
+pcv10.intro.date <- as.Date('2011-07-01')
+pcv13.intro.date <- as.Date('2013-07-01')
 
-# Estimation when vaccine efficacy evaluations started as a tuple (year, week)
-vax.eval.date <- list()
 
 ```
 
+Aggregate weekly counts as monthly counts, indexed by the start of that month.
+
 ```{r}
-total_deaths_df <- df_cases[c("year","week", "under_5_death", "over_60_death")]
-total_deaths_by_year <- total_deaths_df %>%
-  group_by(year) %>%
-  summarise(
-    total_under_5   = sum(under_5_death, na.rm = TRUE),
-    total_over_60   = sum(over_60_death, na.rm = TRUE)
-  )
-total_deaths_by_year_week <- total_deaths_df %>%
+df <- peru[c("year","week", "under_5_death", "over_60_death")]
+
+#Group by year, week
+df <- df %>%
   group_by(year, week) %>%
   summarise(
     total_under_5 = sum(under_5_death, na.rm = TRUE),
@@ -125,40 +126,82 @@ total_deaths_by_year_week <- total_deaths_df %>%
     .groups = "drop"
   )
 
-total_deaths_by_year_week <- total_deaths_by_year_week %>%
+#Format week in standard format
+df <- df %>%
   mutate(date = as.Date(paste0(year, '-01-01')) + weeks(week-1))
+
+#Aggregate into monthly counts
+df <- df %>%
+  mutate(date = floor_date(date, "month")) %>%
+  group_by(date) %>%
+  summarise(
+    under5 = sum(total_under_5,   na.rm = TRUE),
+    over60 = sum(total_over_60,   na.rm = TRUE),
+    .groups = "drop"
+  )
 ```
 
 ```{r}
-head(total_deaths_by_year_week)
+head(df)
 ```
+
+Simple time series of death counts in \<5 yo and \>60 yo.
 
 ```{r}
 #| fig.width: 15
-#| fig.height: 6
+#| fig.height: 9
 
+#Legend for vaccine implementation dates
+vaccine_dates <- tibble(
+  date    = c(pcv7.intro.date, pcv10.intro.date, pcv13.intro.date),
+  vaccine = c("PCV7", "PCV10", "PCV13"),
+  levels = c("PCV7", "PCV10", "PCV13"))
 
 
 p1 <- 
-  ggplot(total_deaths_by_year_week, aes(x = date, y = total_under_5)) +
-      geom_point() +
-      labs(title = "Total deaths for <5 yo in Peru",
-         x = "Year", y = "Count") +
-      # Reference line.
-      geom_vline(xintercept = pcv10.intro.date, col = 'red', lty = 2) +
-      geom_vline(xintercept = pcv13.intro.date, col = 'green', lty = 2) +
-      theme_linedraw()
+  ggplot(df, aes(x = date, y = under5)) +
+    geom_line() +
+    geom_vline( data = vaccine_dates, aes(xintercept = date, colour = vaccine, linetype = vaccine), size = 0.8) +
+    scale_colour_brewer( name = "Vaccine introduction", palette = "Dark2") +
+    scale_linetype_discrete(name = "Vaccine introduction") +
+    labs(title = "Monthly <5 Deaths Over Time", x = "Month (first day)", y = "Total <5 Deaths") +
+    theme_minimal(base_size = 14) +
+    theme(legend.position = "bottom", legend.direction = "horizontal")
+    
 
 p2 <- 
-  ggplot(total_deaths_by_year_week, aes(x = date, y = total_over_60)) +
-      geom_point() +
-      labs(title = "Total deaths for >60 yo in Peru",
-         x = "Year", y = "Count") +
-      # Reference line.
-      geom_vline(xintercept = pcv10.intro.date, col = 'red', lty = 2) +
-      geom_vline(xintercept = pcv13.intro.date, col = 'green', lty = 2) +
-      theme_linedraw()
+  ggplot(df, aes(x = date, y = over60)) +
+    geom_line() +
+    geom_vline( data = vaccine_dates, aes(xintercept = date, colour = vaccine, linetype = vaccine), size = 0.8) +
+    scale_colour_brewer( name = "Vaccine introduction", palette = "Dark2") +
+    scale_linetype_discrete(name = "Vaccine introduction") +
+    labs(title = "Monthly >60 Deaths Over Time", x = "Month (first day)", y = "Total >60 Deaths") +
+    theme_minimal(base_size = 14) +
+    theme(legend.position = "bottom", legend.direction = "horizontal")
    
 # Display the plots side-by-side.
-grid.arrange(p1, p2, nrow = 1)
+grid.arrange(p1, p2, nrow = 2)
+```
+
+It seems like there's a lot more going on with \<5 yo cases, so we will focus on that.
+
+Scatter plot of death count for \<5 yo.
+
+```{r}
+#| fig.width: 6
+#| fig.height: 4
+
+p1 <- 
+  ggplot(df, aes(x = date, y = under5)) +
+      geom_point() +
+      labs(title = "<5 yo Deaths Scatter Plot",
+         x = "Date", y = "Counts") +
+      # Have y-axis for the two plots be the same.
+      ylim(0, NA) +
+      theme_linedraw() +
+      # Specify aspects of the theme plot formatting settings.
+      theme(panel.spacing = unit(2, 'lines'), 
+            axis.text.x = element_text(angle = 90))
+
+p1
 ```
