--- a/PHM-Peru-Analysis.Rmd
+++ b/PHM-Peru-Analysis.Rmd
@@ -53,7 +53,7 @@ suppressPackageStartupMessages({
 NOTE: Location of csv file may be different, adjust accordingly
 
 ```{r}
-peru <- read.csv('data\\peru\\peru.csv')
+peru <- read.csv('data\\peru.csv')
 ```
 
 Renaming the columns into English.
@@ -204,4 +204,80 @@ p1 <-
             axis.text.x = element_text(angle = 90))
 
 p1
+```
+Visualizing the number of deaths by region
+```{r}
+
+deaths_by_region <- peru %>%
+  group_by(region) %>%
+  summarise(total_deaths = sum(under_5_death), .groups = "drop")
+
+p3 <- ggplot(deaths_by_region, aes(x = region, y = total_deaths)) +
+  geom_col(fill = "skyblue") +
+  labs(
+    title = "Total Under-5 Deaths by Region",
+    x = "Region",
+    y = "Total Under-5 Deaths"
+  ) +
+  theme_minimal() + 
+  theme(axis.text.x = element_text(angle = 45, hjust = 1, size = 8))
+
+```
+
+Aggregate weekly counts as monthly counts, indexed by the start of that month.
+(copied from above, can delete)
+```{r}
+df <- peru[c("year","week", "region", "under_5_death")]
+
+#Group by year, week
+df <- df %>%
+  group_by(year, week, region) %>%
+  summarise(
+    total_under_5 = sum(under_5_death, na.rm = TRUE),
+    .groups = "drop"
+  )
+
+#Format week in standard format
+df <- df %>%
+  mutate(date = as.Date(paste0(year, '-01-01')) + weeks(week-1))
+
+#Aggregate into monthly counts
+df <- df %>%
+  mutate(date = floor_date(date, "month")) %>%
+  group_by(date, region) %>%
+  summarise(
+    under5 = sum(total_under_5,   na.rm = TRUE),
+    .groups = "drop"
+  )
+```
+
+making a line plot of deaths by month and region
+```{r}
+
+#creating a function to map deaths by region
+
+region_to_point <- function(data, region_name) {
+  
+  data <- data %>% filter(region == region_name)
+  
+  p <- ggplot(data, aes(x = date, y = under5)) +
+    geom_line() + 
+    geom_vline(data = vaccine_dates, aes(xintercept = date, colour = vaccine, linetype = vaccine), size = 0.8) +
+    scale_colour_brewer(name = "Vaccine Introduction", palette = "Dark2") +
+    scale_linetype_discrete(name = "Vaccine Introduction") +
+    labs(title = paste("Monthly <5 Deaths in", region_name), x = "Date", y = "Deaths") +
+    theme_minimal()
+  
+  p
+}
+
+```
+
+Example to visualize the function
+```{r}
+p4a <- region_to_point(df, "SAN MARTIN")
+p4b <- region_to_point(df, "PUNO")
+
+grid.arrange(p4a, p4b, nrow = 2)
+
 ```
